svc.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
spec:
  selector:
    app: hello
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 82
      nodePort: 30080
